--- a/src/app/componentes/textbox-texto/textbox-texto.component.html
+++ b/src/app/componentes/textbox-texto/textbox-texto.component.html
@@ -16,6 +16,13 @@
                         
                     </td>
         </tr>
-
+        <tr >
+                <td>
+                       
+                </td>
+            <td>
+                    <b *ngIf="valido == false " class="requerido" >* is required </b> &nbsp;
+            </td>
+        </tr>
     </table>
 </div>
