--- a/src/app/componentes/codigo-fono/codigo-fono.component.html
+++ b/src/app/componentes/codigo-fono/codigo-fono.component.html
@@ -1,12 +1,16 @@
 <table>
     <tr>
         <td> <label [ngClass]="clase_label" for="dropdown" [style.width.px]="label_ancho">{{titulo}}</label></td>
-        <td><select [(ngModel)]="value" [ngClass]="clase_input" class="form-control" id="dropdown" [style.width.px]="input_ancho">
-
-        <option value="9">9</option>
-        <option value="4">4</option>
-        <option value="2">2</option>
-        <option value="6">6</option>
-      </select> </td>
+        <td>  <select  [(ngModel)]="value"  [ngClass]="clase_input" class="form-control" id="dropdown"  [style.width.px]="input_ancho"> 
+            <option *ngFor="let option of lista " value="{{option}}">{{option}}</option>  
+           </select>  </td>
     </tr>
+    <tr >
+        <td>
+               
+        </td>
+    <td>
+            <b *ngIf="valido == false " class="requerido" >* is required </b> &nbsp;
+    </td>
+</tr>
 </table>
