--- a/src/app/componentes/email/email.component.html
+++ b/src/app/componentes/email/email.component.html
@@ -4,5 +4,13 @@
             <td [style.display]="ocultar ? 'none' : 'inline-block'"> <label for="text" [style.width.px]="label_ancho" [ngClass]="clase_label">{{titulo}}</label></td>
             <td><input [(ngModel)]="value" [ngClass]="clase_input" id="text" type="email" class="form-control" [style.width.px]="input_ancho"></td>
         </tr>
+        <tr >
+                <td>
+                       
+                </td>
+            <td>
+                    <b *ngIf="valido == false " class="requerido" >* is required </b> &nbsp;
+            </td>
+        </tr>
     </table>
 </div>
