--- a/src/app/componentes/textbox-numerico/textbox-numerico.component.html
+++ b/src/app/componentes/textbox-numerico/textbox-numerico.component.html
@@ -2,7 +2,15 @@
     <table>
         <tr>
             <td [style.display]="ocultar ? 'none' : 'inline-block'"> <label for="text" [style.width.px]="label_ancho" [ngClass]="clase_label">{{titulo}}</label></td>
-            <td [style.display]="form_c ? 'block' : 'inline-block'"><input [ngClass]="clase_input" id="text" type="number" min="0" class="form-control" [style.width.px]="input_ancho" [(ngModel)]="value"></td>
+            <td [style.display]="form_c ? 'block' : 'inline-block'"><input [ngClass]="clase_input" id="text" type="number" class="form-control" [style.width.px]="input_ancho" [(ngModel)]="value"></td>
+        </tr>
+        <tr >
+                <td >
+                       
+                </td>
+            <td>
+                    <b *ngIf="valido == false " class="requerido" >* is required </b> &nbsp;
+            </td>
         </tr>
     </table>
 </div>
